# abelethash: C/C++ implementation of AbelEthash, the Abelian Proof of Work algorithm.
# Copyright 2022-2023 Abelian Foundation.
# Licensed under the Apache License, Version 2.0.

add_subdirectory(benchmarks)
add_subdirectory(experimental)
add_subdirectory(fakeminer)
add_subdirectory(integration)
add_subdirectory(unittests)
